--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
 						<h1><strong>Allie Mitchell</strong>
 						<p>Cartography Portfolio</h1>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/dikembe3000" class="icon style2 fa-github"><span class="label">500px</span></a></li>
-							<li><a href="mailto:nicholas.perdue@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/alliemitchell915" class="icon style2 fa-github"><span class="label">500px</span></a></li>
+							<li><a href="mailto:allison.mitchell@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
