--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
+									<a href="images/View from Mordor.png">
+										<img src="images/View from Mordor.png" alt="" />
+										<h3>The View from Mordor</h3>
 									</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
