--- a/index.html
+++ b/index.html
@@ -32,38 +32,31 @@
 										<img src="images/View from Mordor.png" alt="" />
 										<h3>The View from Mordor</h3>
 									</a>
-									<a href="images/Oilspills_map.png">
-										<img src="images/Oilspills_map.png" alt="" />
-										<h3>Crude Oil Spills</h3>
+									<a href="images/FloodRisk.png">
+										<img src="images/FloodRisk.png" alt="" />
+										<h3>Sea Level Rise In Humboldt Bay</h3>
 									</a>
-									<a href="images/Carpet.png">
-										<img src="images/Carpet.png" alt="" />
-										<h3>PDX Carpet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/States_map.png">
-										<img src="images/States_map.png" alt="" />
-										<h3>US Capitals</h3>
-									</a>
-									<a href="images/Coastline_map.png">
-										<img src="images/Coastline_map.png" alt="" />
-										<h3>Louisiana Coastline</h3>
-									</a>
-									<a href="images/Portland_map.png">
-										<img src="images/Portland_map.png" alt="" />
-										<h3>Portland Landscape</h3>
+									<a href="images/Musical_Festival_Lab.png">
+										<img src="images/Musical_Festival_Lab.png" alt="" />
+										<h3>Music Festival in Humboldt County</h3>
 									</a>
 								</div>
 								<div>
-									<a href="images/Transit_map.png">
-										<img src="images/Transit_map.png" alt="" />
-										<h3>Humboldt Transit System</h3>
+									<a href="images/Queries Lab.png">
+										<img src="images/Queries Lab.png" alt="" />
+										<h3>The Perfect City</h3>
 									</a>
-									<a href="images/US_map.png">
-										<img src="images/US_map.png" alt="" />
-										<h3>Physical Map of United States</h3>
+									<a href="images/Hugo Lakes Map.png">
+										<img src="images/Hugo Lakes Map.png" alt="" />
+										<h3>Hugo Lakes Map</h3>
 									</a>
+									<a href="images/Minnesota Map.png">
+										<img src="images/Minnesota Map.png" alt="" />
+										<h3>Minnesota Map</h3>
+									</a>
+								</div>
+								<div>
+									
 								</div>
 							</section>
 						<div>
