--- a/index.html
+++ b/index.html
@@ -60,16 +60,14 @@
 								</div>
 							</section>
 						<div>
-						<iframe width="785" height="500" src="https://dikembe3000.github.io/Mural_Project/" frameborder="0" width="100%" height="800"></iframe>
-								<h3>Balmy Alley Mural Project</h3>
-								<p>Murals and Artist of the Famous Balmy Alley in the Mission District</p>
+						
 						
 						</div>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Maps that Matter. All rights reserved. Design: Nicholas Perdue | Department of Geography | Humboldt State University </p>
+						<p>Maps by Allie Mitchell. All rights reserved. Design: Nicholas Perdue | Department of Geography | Humboldt State University </p>
 					</footer>
 
 			</div>
