--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Maps by Allie Mitchell. All rights reserved. Design: Nicholas Perdue | Department of Geography | Humboldt State University </p>
+						<p>Maps by Allie Mitchell. All rights reserved. Design: Allison Mitchell |  Humboldt State University </p>
 					</footer>
 
 			</div>
