--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 						<span class="avatar"><img src="images/Profile.jpg" alt="" /></span>
 						<h1><strong>Allie Mitchell</strong>
 						<p>Cartography Portfolio</h1>
+						<p>About me</h1>
+				                <p>A marine fisheries biologist interested in the applications of geospatial sciences in fisheries management</h1>
 						<ul class="icons">
 							<li><a href="https://github.com/alliemitchell915" class="icon style2 fa-github"><span class="label">500px</span></a></li>
 							<li><a href="mailto:allison.mitchell@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
